--- a/Areas/Admin/Views/Admin/AdminAddEdit.cshtml
+++ b/Areas/Admin/Views/Admin/AdminAddEdit.cshtml
@@ -27,7 +27,7 @@
                       </fieldset>
                         <h5 class="mt-2">Password</h5>
                       <fieldset class="form-group">
-                            <input type="text" class="form-control" id="placeholderInput" placeholder="Enter password" asp-for="AdminPassWord">
+                            <input type="password" class="form-control" id="placeholderInput" placeholder="Enter password" asp-for="AdminPassWord">
                       </fieldset>
                   </div>
               </div>
