--- a/Areas/BillWiseProduct/Views/BillWiseProduct/BillWiseProductList.cshtml
+++ b/Areas/BillWiseProduct/Views/BillWiseProduct/BillWiseProductList.cshtml
@@ -20,7 +20,6 @@
 					<li><a data-action="collapse"><i class="ft-minus"></i></a></li>
 					<li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
 					<li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-					<li><a data-action="close"><i class="ft-x"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -30,8 +29,8 @@
 					<thead>
 						<tr>
 							<th scope="col">Quantity</th>
-							<th scope="col">Bill ID</th>
-							<th scope="col">Product ID</th>
+							<th scope="col">Product Name</th>
+							<th scope="col">Bill Status</th>
 							<th scope="col">Creation Date</th>
 							<th scope="col">Modification Date</th>
 							
@@ -42,8 +41,8 @@
 						{
 							<tr>
 								<td>@dr["Quantity"]</td>
-								<td>@dr["BillID"]</td>
-								<td>@dr["ProductID"]</td>
+								<td>@dr["ProductName"]</td>
+								<td>@dr["BillStatus"]</td>
 								<td>@Convert.ToDateTime(dr["CreationDate"]).ToString("dd-MM-yyyy")</td>
 								<td>@Convert.ToDateTime(dr["ModificationDate"]).ToString("dd-MM-yyyy")</td>
 								
