--- a/Areas/Customer/Views/Customer/CustomerAddEdit.cshtml
+++ b/Areas/Customer/Views/Customer/CustomerAddEdit.cshtml
@@ -24,7 +24,7 @@
 
                         <h5 class="mt-2">Password</h5>
                       <fieldset class="form-group">
-                            <input type="text" class="form-control" id="placeholderInput" placeholder="Enter Password" asp-for="CustomerPassword">
+                            <input type="password" class="form-control" id="placeholderInput" placeholder="Enter Password" asp-for="CustomerPassword">
                       </fieldset>
                   </div>
               </div>
