--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <!-- BEGIN Custom CSS-->
     <!-- END Custom CSS-->
 </head>
-<body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar " style="max-width:100%;" data-open="click" data-menu="vertical-menu" data-color="bg-chartbg" data-col="2-columns">
+<body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar " style="max-width:100%;  overflow-x: hidden;" data-open="click" data-menu="vertical-menu" data-color="bg-chartbg" data-col="2-columns">
 
    
     <div class="row">
@@ -68,7 +68,7 @@
      
 
     <div class="row">
-        <div class="col-2">
+        <div class="col-3">
             <div class="main-menu menu-fixed menu-light menu-accordion    menu-shadow " data-scroll-to-active="true" data-img="theme-assets/images/backgrounds/02.jpg">
                 <div class="navbar-header">
                     <ul class="nav navbar-nav flex-row">
@@ -138,8 +138,8 @@
             </div>
 
         </div>
-        <div class="col-10" style="padding-left:90px; padding-top:20px;">
-            <main role="main" class="pb-3">
+        <div class="col-9" style="padding-left: 0px; ">
+            <main role="main" style="padding-right: 20px;">
                 @RenderBody()
             </main>
         </div>
