--- a/Areas/Admin/Views/Admin/AdminList.cshtml
+++ b/Areas/Admin/Views/Admin/AdminList.cshtml
@@ -24,7 +24,6 @@
 								<li><a data-action="collapse"><i class="ft-minus"></i></a></li>
 								<li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
 								<li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-								<li><a data-action="close"><i class="ft-x"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -37,9 +36,8 @@
 										<th scope="col">UserName</th>
 										<th scope="col">PassWord</th>
 										<th scope="col">Creation Date</th>
-										<th scope="col">Modification Date</th> 
-										<th scope="col">Action</th>
-										<th scope="col">Action</th>
+										<th scope="col">Modification Date</th>
+								<th scope="col" class="text-center" colspan="2">Action</th>
 									</tr>
 								</thead>
 								<tbody>
