--- a/Areas/Country/Views/Country/CountryList.cshtml
+++ b/Areas/Country/Views/Country/CountryList.cshtml
@@ -23,7 +23,6 @@
 					<li><a data-action="collapse"><i class="ft-minus"></i></a></li>
 					<li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
 					<li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-					<li><a data-action="close"><i class="ft-x"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -36,8 +35,7 @@
 							<th scope="col">Country Code</th>
 							<th scope="col">Creation Date</th>
 							<th scope="col">Modification Date</th>
-							<th scope="col">Action</th>
-							<th scope="col">Action</th>
+							<th scope="col" class="text-center" colspan="2">Action</th>
 						</tr>
 					</thead>
 					<tbody>
