--- a/Areas/ProductType/Views/ProductType/ProductTypeList.cshtml
+++ b/Areas/ProductType/Views/ProductType/ProductTypeList.cshtml
@@ -21,7 +21,6 @@
 					<li><a data-action="collapse"><i class="ft-minus"></i></a></li>
 					<li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
 					<li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-					<li><a data-action="close"><i class="ft-x"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -33,8 +32,7 @@
 							<th scope="col">Product Type</th>
 							<th scope="col">Creation Date</th>
 							<th scope="col">Modification Date</th>
-							<th scope="col">Action</th>
-							<th scope="col">Action</th>
+							<th scope="col" class="text-center" colspan="2">Action</th>
 						</tr>
 					</thead>
 					<tbody>
