--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="navigation" style="padding-top: 150px;  padding-left: 250px; font-size: 50px;">
-    Welcome To<br /> AdminPanal
+    Welcome To<br /> AdminPanel
 </div>
 
